Fix report view styling: stop title overlapping other content

--- a/themes/internewscar/css/_default.css
+++ b/themes/internewscar/css/_default.css
@@ -241,13 +241,13 @@ table.table-list thead th.date { width:20%; }
 
 /* single report page */
 div#main { padding:15px 10px; }
-#main .left-col { background:#EEEDEA; position:relative; padding:35px 10px 10px; margin:4px 0 0 18px; width:525px; }
+#main .left-col { background:#EEEDEA; position:relative; padding:0 10px 10px; margin:4px 0 0 18px; width:525px; }
 
 
-.left-col h1.report-title { float:left; position:absolute; top:-18px; left:-18px; padding:5px; border:7px solid #fff; background:#529bf5; color:#fff; }
+.left-col h1.report-title { float:left; position: relative; top: -19px; left: -28px; padding:5px; border:7px solid #fff; background:#529bf5; color:#fff; }
 
-.report_detail .r_verified { position:absolute; top:30px; right:18px;  }
-
+.report_detail .r_verified { float: right; clear: left; margin: 0 18px 0 0; }
+.report-when-where { clear: left; }
 div.report-additional-reports { background:#EEEDEA; position:relative; padding:35px 10px 10px; margin-left:18px; }
 div.report-additional-reports h4 { position:absolute; float:left; top:-18px; left:-18px; padding:5px; border:7px solid #fff; background:#529bf5; color:#fff; }
 div.report-additional-reports h5 { font-family: Arial, sans-serif;  }
